# cvplt

./: .gitignore  README.md  cvplt.py  demo.py  pyproject.toml  requirements.txt
tests/: test_cvplt.py
