[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cvplt"
version = "0.1.0"
description = "Lightweight NumPy-to-OpenCV plotting for real-time display."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "opencv-python>=4.11",
]

[project.urls]
Repository = "https://github.com/benfpv/cvplt"

[tool.pytest.ini_options]
testpaths = ["tests"]
